<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.udacity.scottbrissenden.myportfolioapp.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_banner_string"
        android:id="@+id/TextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:textAlignment="center"
        android:textSize="@dimen/abc_text_size_title_material"
        android:textIsSelectable="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_1_name"
        android:id="@+id/Button1"
        android:layout_below="@+id/TextView"
        android:layout_alignLeft="@+id/TextView"
        android:layout_alignStart="@+id/TextView"
        android:layout_alignRight="@+id/TextView"
        android:layout_alignEnd="@+id/TextView"
        android:onClick="sendMessage"
        android:background="#2e3d49"
        android:textColor="#ffffff" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_2_name"
        android:id="@+id/Button2"
        android:layout_below="@+id/Button1"
        android:layout_alignLeft="@+id/Button1"
        android:layout_alignStart="@+id/Button1"
        android:layout_alignRight="@+id/Button1"
        android:layout_alignEnd="@+id/Button1"
        android:onClick="sendMessage"
        android:background="#2e3d49"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_3_name"
        android:id="@+id/Button3"
        android:layout_below="@+id/Button2"
        android:layout_alignLeft="@+id/Button2"
        android:layout_alignStart="@+id/Button2"
        android:layout_alignRight="@+id/Button2"
        android:layout_alignEnd="@+id/Button2"
        android:onClick="sendMessage"
        android:background="#2e3d49"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_4_name"
        android:id="@+id/Button4"
        android:layout_below="@+id/Button3"
        android:layout_alignLeft="@+id/Button3"
        android:layout_alignStart="@+id/Button3"
        android:layout_alignRight="@+id/Button3"
        android:layout_alignEnd="@+id/Button3"
        android:onClick="sendMessage"
        android:background="#2e3d49"
        android:textColor="#ffffff" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_5_name"
        android:id="@+id/Button5"
        android:layout_below="@+id/Button4"
        android:layout_alignLeft="@+id/Button4"
        android:layout_alignStart="@+id/Button4"
        android:layout_alignRight="@+id/Button4"
        android:layout_alignEnd="@+id/Button4"
        android:onClick="sendMessage"
        android:background="#2e3d49"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_6_name"
        android:id="@+id/Button6"
        android:layout_below="@+id/Button5"
        android:layout_alignLeft="@+id/Button5"
        android:layout_alignStart="@+id/Button5"
        android:layout_alignRight="@+id/Button5"
        android:layout_alignEnd="@+id/Button5"
        android:onClick="sendMessage"
        android:background="#2e3d49"
        android:textColor="#ffffff" />

</RelativeLayout>
